<resources>
    <string name="app_name">Task</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="job_title">Job Title</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_all_users">Get All Users</string>
</resources>